# e2lib

./: .gitignore  CMakeLists.txt  README.md
asn1/oran/: e2sm_rc_v07_00.asn  e2sm_v07_00.asn
asn1/oran/e2ap/v07.00/: E2AP-CommonDataTypes.asn  E2AP-Constants.asn  E2AP-Containers.asn  E2AP-IEs.asn  E2AP-PDU-Contents.asn  E2AP-PDU-Descriptions.asn
asn1/oran/e2sm/: E2SM-KPM-v06.00.asn  E2SM-RC-v06.00.asn
asn1/oran/e2sm/kpm/: AMF-UE-NGAP-ID.c  AMF-UE-NGAP-ID.h  AMFPointer.c  AMFPointer.h  AMFRegionID.c  AMFRegionID.h  AMFSetID.c  AMFSetID.h  BIT_STRING_uper.c  Beam-ID.c  Beam-ID.h  BinIndex.c  BinIndex.h  BinRangeDefinition.c  BinRangeDefinition.h  BinRangeItem.c  BinRangeItem.h  BinRangeList.c  BinRangeList.h  BinRangeValue.c  BinRangeValue.h  CGI.c  CGI.h  Cell-RNTI.c  Cell-RNTI.h  CoreCPID.c  CoreCPID.h  DistMeasurementBinRangeItem.c  DistMeasurementBinRangeItem.h  DistMeasurementBinRangeList.c  DistMeasurementBinRangeList.h  E-UTRA-ARFCN.c  E-UTRA-ARFCN.h  E-UTRA-PCI.c  E-UTRA-PCI.h  E-UTRA-TAC.c  E-UTRA-TAC.h  E2SM-KPM-ActionDefinition-Format1.c  E2SM-KPM-ActionDefinition-Format1.h  E2SM-KPM-ActionDefinition-Format2.c  (+313 more)
asn1/oran/e2sm/rc/: AMF-UE-NGAP-ID.c  AMF-UE-NGAP-ID.h  AMFPointer.c  AMFPointer.h  AMFRegionID.c  AMFRegionID.h  AMFSetID.c  AMFSetID.h  AdditionalSupportedFormat.c  AdditionalSupportedFormat.h  Associated-UE-Info-Item.c  Associated-UE-Info-Item.h  Associated-UE-Info.c  Associated-UE-Info.h  Beam-ID.c  Beam-ID.h  CGI.c  CGI.h  (+556 more)
docs/ans1/: compile_asn_files.md
include/e2lib/: e2lib.h
src/: e2lib.cpp
tests/: CMakeLists.txt  test_main.cpp
(+1453 files in other folders)
